[gd_scene load_steps=5 format=2]

[ext_resource path="res://Gameplay.gd" type="Script" id=1]
[ext_resource path="res://fonts/MinimalFont5x7.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0.941176, 0.964706, 0.941176, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="Gameplay" type="ColorRect"]
margin_right = 400.0
margin_bottom = 240.0
color = Color( 0.133333, 0.137255, 0.137255, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 400.0
margin_bottom = 32.0
rect_scale = Vector2( 1, 0.998372 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContextLabel" type="Label" parent="CenterContainer"]
margin_left = 128.0
margin_top = 2.0
margin_right = 272.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Context Title"

[node name="TabContainer" type="TabContainer" parent="."]
margin_top = 33.0
margin_right = 400.0
margin_bottom = 238.0
rect_min_size = Vector2( 400, 205 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="ScrollContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 250, 0 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Main"]
margin_right = 392.0
margin_bottom = 164.0

[node name="TextContainer" type="HBoxContainer" parent="TabContainer/Main/VBoxContainer"]
margin_right = 392.0
margin_bottom = 140.0
rect_min_size = Vector2( 380, 140 )

[node name="Text" type="Label" parent="TabContainer/Main/VBoxContainer/TextContainer"]
margin_right = 390.0
margin_bottom = 140.0
rect_min_size = Vector2( 390, 140 )
autowrap = true
clip_text = true

[node name="MoveCommand" type="HBoxContainer" parent="TabContainer/Main/VBoxContainer"]
margin_top = 144.0
margin_right = 392.0
margin_bottom = 164.0

[node name="MoveOption" type="OptionButton" parent="TabContainer/Main/VBoxContainer/MoveCommand"]
margin_right = 135.0
margin_bottom = 20.0
rect_min_size = Vector2( 135, 0 )
text = "move"
clip_text = true

[node name="Using" type="Label" parent="TabContainer/Main/VBoxContainer/MoveCommand"]
margin_left = 139.0
margin_top = 3.0
margin_right = 173.0
margin_bottom = 17.0
text = "using"

[node name="Weapon" type="OptionButton" parent="TabContainer/Main/VBoxContainer/MoveCommand"]
margin_left = 177.0
margin_right = 257.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 0 )
text = "weapon"
clip_text = true

[node name="Against" type="Label" parent="TabContainer/Main/VBoxContainer/MoveCommand"]
margin_left = 261.0
margin_top = 3.0
margin_right = 277.0
margin_bottom = 17.0
text = "on"

[node name="Target" type="OptionButton" parent="TabContainer/Main/VBoxContainer/MoveCommand"]
margin_left = 281.0
margin_right = 361.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 0 )
text = "target"
clip_text = true

[node name="SubmitBtn" type="Button" parent="TabContainer/Main/VBoxContainer/MoveCommand"]
margin_left = 365.0
margin_right = 392.0
margin_bottom = 20.0
text = "ok"

[node name="Player" type="ScrollContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 250, 0 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column" type="VBoxContainer" parent="TabContainer/Player"]
margin_right = 330.0
margin_bottom = 140.0
rect_min_size = Vector2( 330, 140 )

[node name="Inventory" type="ScrollContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 250, 0 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column" type="VBoxContainer" parent="TabContainer/Inventory"]
margin_right = 330.0
margin_bottom = 140.0
rect_min_size = Vector2( 330, 140 )

[node name="InventoryLabel" type="Label" parent="TabContainer/Inventory/Column"]
visible = false
margin_right = 330.0
margin_bottom = 14.0

[node name="Location" type="ScrollContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 250, 0 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column" type="VBoxContainer" parent="TabContainer/Location"]
margin_right = 330.0
margin_bottom = 140.0
rect_min_size = Vector2( 330, 140 )

[node name="LocationLabel" type="Label" parent="TabContainer/Location/Column"]
visible = false
margin_right = 330.0
margin_bottom = 14.0
autowrap = true

[node name="HiddenTabs" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tests" type="ScrollContainer" parent="HiddenTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 65.0
margin_right = 354.0
margin_bottom = 29.0
rect_min_size = Vector2( 250, 0 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="HiddenTabs/Tests"]
margin_right = 390.0
margin_bottom = 148.0

[node name="HBoxContainer" type="HBoxContainer" parent="HiddenTabs/Tests/GridContainer"]
margin_right = 390.0
margin_bottom = 148.0

[node name="Column" type="VBoxContainer" parent="HiddenTabs/Tests/GridContainer/HBoxContainer"]
margin_right = 390.0
margin_bottom = 148.0

[node name="TestBtn1" type="Button" parent="HiddenTabs/Tests/GridContainer/HBoxContainer/Column"]
margin_right = 390.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.941176, 0.964706, 0.941176, 1 )
custom_fonts/font = SubResource( 2 )
text = "setup_random_monster_encounter()"

[node name="TestBtn2" type="Button" parent="HiddenTabs/Tests/GridContainer/HBoxContainer/Column"]
margin_top = 38.0
margin_right = 390.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.941176, 0.964706, 0.941176, 1 )
custom_fonts/font = SubResource( 2 )
text = "generate_monsters()"

[node name="TestBtn3" type="Button" parent="HiddenTabs/Tests/GridContainer/HBoxContainer/Column"]
margin_top = 76.0
margin_right = 390.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0.941176, 0.964706, 0.941176, 1 )
custom_fonts/font = SubResource( 2 )
text = "recover()"

[node name="TestBtn4" type="Button" parent="HiddenTabs/Tests/GridContainer/HBoxContainer/Column"]
margin_top = 114.0
margin_right = 390.0
margin_bottom = 148.0
custom_colors/font_color = Color( 0.941176, 0.964706, 0.941176, 1 )
custom_fonts/font = SubResource( 2 )
text = "generate_treasure()"

[connection signal="item_selected" from="TabContainer/Main/VBoxContainer/MoveCommand/MoveOption" to="." method="_on_MoveOption_item_selected"]
[connection signal="item_selected" from="TabContainer/Main/VBoxContainer/MoveCommand/Weapon" to="." method="_on_Weapon_item_selected"]
[connection signal="item_selected" from="TabContainer/Main/VBoxContainer/MoveCommand/Target" to="." method="_on_Target_item_selected"]
[connection signal="pressed" from="TabContainer/Main/VBoxContainer/MoveCommand/SubmitBtn" to="." method="_on_SubmitBtn_pressed"]
[connection signal="pressed" from="HiddenTabs/Tests/GridContainer/HBoxContainer/Column/TestBtn1" to="." method="_on_TestBtn1_pressed"]
[connection signal="pressed" from="HiddenTabs/Tests/GridContainer/HBoxContainer/Column/TestBtn2" to="." method="_on_TestBtn2_pressed"]
[connection signal="pressed" from="HiddenTabs/Tests/GridContainer/HBoxContainer/Column/TestBtn3" to="." method="_on_TestBtn3_pressed"]
[connection signal="pressed" from="HiddenTabs/Tests/GridContainer/HBoxContainer/Column/TestBtn4" to="." method="_on_TestBtn4_pressed"]
